[add] skill Linux

--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -16,6 +16,7 @@ import {
   NextjsIcon,
   GitIcon,
   GithubIcon,
+  LinuxIcon,
 } from "@/icons/index.astro";
 
 const ICONS: TIcons = {
@@ -30,6 +31,7 @@ const ICONS: TIcons = {
   "Next.js": NextjsIcon,
   Git: GitIcon,
   GitHub: GithubIcon,
+  Linux: LinuxIcon,
 };
 ---
 
