--- a/src/icons/index.astro
+++ b/src/icons/index.astro
@@ -18,6 +18,8 @@ import CallIcon from "./CallIcon.astro";
 import LinkedinIcon from "./LinkedinIcon.astro";
 import Language from "./LanguageIcon.astro";
 import CommandIcon from "./CommandIcon.astro";
+import LinuxIcon from "./LinuxIcon.astro";
+import DownloadIcon from "./DownloadIcon.astro";
 
 export {
   HtmlIcon,
@@ -39,5 +41,7 @@ export {
   LinkedinIcon,
   Language,
   CommandIcon,
+  LinuxIcon,
+  DownloadIcon,
 };
 ---
