--- a/src/components/ui/Badget.astro
+++ b/src/components/ui/Badget.astro
@@ -6,6 +6,7 @@
   span {
     color: var(--terciary);
     background-color: var(--bg-secondary);
+    outline: 1px solid var(--bg-secondary);
     display: inline-flex;
     align-items: center;
     gap: 4px;
