--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -14,13 +14,14 @@ const { summary } = basics;
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content={summary} />
-    <meta
-      property="og:title"
-      content="Portfolio de Victor Romero | Front-end Developer Junior"
-    />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={summary} />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-json-ten.vercel.app/" />
-    <meta property="og:image" content="/me.webp" />
+    <meta
+      property="og:image"
+      content="https://portfolio-json-ten.vercel.app/me.webp"
+    />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
