--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -94,6 +94,7 @@ import { projects } from "@cv";
   a {
     color: var(--secondary);
     text-decoration: none;
+    font-weight: 500;
   }
 
   .dot {
