[fix] hide ninja-key

--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -211,4 +211,9 @@ const profileInfo = profiles.map(({ network, url }) => {
       display: none;
     }
   }
+  @media print {
+    ninja-keys {
+      display: none !important;
+    }
+  }
 </style>
