--- a/src/icons/index.astro
+++ b/src/icons/index.astro
@@ -19,6 +19,8 @@ import LinkedinIcon from "./LinkedinIcon.astro";
 import Language from "./LanguageIcon.astro";
 import CommandIcon from "./CommandIcon.astro";
 import LinuxIcon from "./LinuxIcon.astro";
+import CertificateIcon from "./CertificateIcon.astro";
+import WorldShareIcon from "./WorldShareIcon.astro";
 
 export {
   HtmlIcon,
@@ -41,5 +43,7 @@ export {
   Language,
   CommandIcon,
   LinuxIcon,
+  CertificateIcon,
+  WorldShareIcon,
 };
 ---
