--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Education from "@/components/sections/Education.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Skills from "@/components/sections/Skills.astro";
 import KeyboardManager from "@/components/KeyboardManager.astro";
+import Certificate from "@/components/sections/Certificate.astro";
 
 const { name, label } = basics;
 ---
@@ -19,6 +20,8 @@ const { name, label } = basics;
 		<About />
 
 		<Projects />
+
+		<Certificate />
 
 		<Skills />
 
