--- a/src/icons/index.astro
+++ b/src/icons/index.astro
@@ -16,11 +16,10 @@ import MapPinIcon from "./MapPinIcon.astro";
 import PrinterIcon from "./PrinterIcon.astro";
 import CallIcon from "./CallIcon.astro";
 import LinkedinIcon from "./LinkedinIcon.astro";
-import Language from "./LanguageIcon.astro";
+import LanguageIcon from "./LanguageIcon.astro";
 import CommandIcon from "./CommandIcon.astro";
 import LinuxIcon from "./LinuxIcon.astro";
-import CertificateIcon from "./CertificateIcon.astro";
-import WorldShareIcon from "./WorldShareIcon.astro";
+import WhatsappIcon from "./WhatsappIcon.astro";
 
 export {
   HtmlIcon,
@@ -40,10 +39,9 @@ export {
   PrinterIcon,
   CallIcon,
   LinkedinIcon,
-  Language,
+  LanguageIcon,
   CommandIcon,
   LinuxIcon,
-  CertificateIcon,
-  WorldShareIcon,
+  WhatsappIcon,
 };
 ---
