--- a/src/components/sections/Certificate.astro
+++ b/src/components/sections/Certificate.astro
@@ -3,7 +3,7 @@ import Section from "../Section.astro";
 import YearsComponent from "../ui/YearsComponent.astro";
 import { certificates } from "@cv";
 
-import { WorldShareIcon, CertificateIcon } from "@/icons/index.astro";
+import { CalendarIcon } from "@/icons/index.astro";
 ---
 
 <Section title="Certificados">
@@ -16,30 +16,31 @@ import { WorldShareIcon, CertificateIcon } from "@/icons/index.astro";
           <li>
             <article>
               <div>
-                <h3>{name}</h3>
-                {url && (
-                  <a
-                    href={url}
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    title={"Certificado del curso: " + name}
-                    aria-label={"Certificado del curso: " + name}
-                  >
-                    <WorldShareIcon width="18" height="18" aria-hidden="true" />
-                  </a>
+                {url ? (
+                  <h3>
+                    <a
+                      href={url}
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      title={"Certificado del curso: " + name}
+                      aria-label={"Certificado del curso: " + name}
+                    >
+                      {name}
+                    </a>
+                  </h3>
+                ) : (
+                  <h3>{name}</h3>
                 )}
-              </div>
-
-              <div>
-                <h4>{issuer}</h4>
 
                 <YearsComponent>
-                  <span slot="icon" class="year">
-                    <CertificateIcon width="16" height="16" />
+                  <span slot="icon">
+                    <CalendarIcon width="16" height="16" />
                   </span>
-                  <span class="year">{year}</span>
+                  <span>{year}</span>
                 </YearsComponent>
               </div>
+
+              <h4>{issuer}</h4>
             </article>
           </li>
         );
@@ -50,37 +51,13 @@ import { WorldShareIcon, CertificateIcon } from "@/icons/index.astro";
 
 <style>
   article {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
     margin-bottom: 8px;
   }
 
-  article div {
+  article > div {
+    width: 100%;
     display: inline-flex;
-  }
-
-  article div:first-child {
-    align-items: flex-end;
+    justify-content: space-between;
     gap: 8px;
-  }
-
-  article div:last-child {
-    align-items: center;
-    gap: 16px;
-  }
-
-  h4 {
-    font-size: 1rem;
-  }
-
-  .year {
-    color: var(--paragraph);
-  }
-
-  @media (hover: hover) {
-    a:hover {
-      color: var(--primary);
-    }
   }
 </style>
