[update] styles badget

--- a/src/components/ui/YearsComponent.astro
+++ b/src/components/ui/YearsComponent.astro
@@ -1,4 +1,4 @@
-<span class="time">
+<span>
   <slot name="icon" />
   <time>
     <slot />
@@ -6,10 +6,7 @@
 </span>
 
 <style>
-  .time {
+  span {
     color: var(--terciary);
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
   }
 </style>
