--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -106,7 +106,21 @@ const profileInfo = profiles.map(({ network, url }) => {
         icon: downloadSVG,
         hotkey: "Ctrl+Shift+D",
         section: "Acciones",
-        handler: () => window.alert("Descargando"),
+        handler: () => {
+          let download = document.createElement("a");
+          console.log("download: ", download);
+          download.setAttribute(
+            "download",
+            "https://portfolio-json-ten.vercel.app/assets/Portfolio_de_Victor_Romero_Front-end_Developer.pdf",
+          );
+
+          download.style.display = "none";
+          document.body.appendChild(download);
+
+          download.click();
+
+          document.body.removeChild(download);
+        },
       },
       ...data,
       {
@@ -114,7 +128,7 @@ const profileInfo = profiles.map(({ network, url }) => {
         title: "Repositorio de midudev",
         icon: githubSVG,
         hotkey: "Ctrl+Shift+C",
-        section: "Créditos a",
+        section: "Fuentes",
         handler: () =>
           window.open(
             "https://github.com/midudev/minimalist-portfolio-json",
