[delete] color tertiary

--- a/src/components/ui/Badget.astro
+++ b/src/components/ui/Badget.astro
@@ -4,7 +4,7 @@
 
 <style>
   span {
-    color: var(--terciary);
+    color: var(--paragraph);
     background-color: var(--bg-secondary);
     outline: 1px solid var(--bg-secondary);
     font-size: 0.7rem;
