--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -38,11 +38,10 @@ const { summary } = basics;
 <style is:global>
   :root {
     --bg-color: #232946;
-    --bg-secondary: #363f6c;
+    --bg-secondary: hwb(230 14% 56%);
     --paragraph: #b8c1ec;
     --primary: #fffffe;
     --secondary: #ececec;
-    --terciary: #eebbc3;
   }
 
   /* css reset */
@@ -152,7 +151,6 @@ const { summary } = basics;
       --paragraph: #70706a;
       --primary: #242422;
       --secondary: #70706a;
-      --terciary: #242422;
     }
 
     .no-print {
