[update] og:opengraph

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -162,8 +162,10 @@ const newPhoneNumber = fixPhoneNumber(phone);
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
+    object-position: center;
     width: 128px;
     border-radius: 50%;
+    outline: 1px solid var(--bg-secondary);
   }
 
   @media (hover: hover) {
