--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -20,7 +20,7 @@ const { summary } = basics;
     <meta property="og:url" content="https://portfolio-json-ten.vercel.app/" />
     <meta
       property="og:image"
-      content="https://portfolio-json-ten.vercel.app/me.webp"
+      content="https://portfolio-json-ten.vercel.app/opengraph-image.webp"
     />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
