--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -153,6 +153,10 @@ const { summary } = basics;
       --secondary: #70706a;
     }
 
+    .space-on-print {
+      padding-top: 5rem;
+    }
+
     .no-print {
       display: none !important;
     }
