--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,40 +1,43 @@
 ---
-import Layout from "@/layout/Layout.astro";
-import { basics } from "@cv";
-import Hero from "@/components/sections/Hero.astro";
+import KeyboardManager from "@/components/KeyboardManager.astro";
 import About from "@/components/sections/About.astro";
-import Experience from "@/components/sections/Experience.astro";
+import Certificate from "@/components/sections/Certificate.astro";
 import Education from "@/components/sections/Education.astro";
+import Experience from "@/components/sections/Experience.astro";
+import Hero from "@/components/sections/Hero.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Skills from "@/components/sections/Skills.astro";
-import KeyboardManager from "@/components/KeyboardManager.astro";
-import Certificate from "@/components/sections/Certificate.astro";
+import Separator from "@/components/ui/Separator.astro";
+import Layout from "@/layout/Layout.astro";
+import { basics } from "@cv";
 
 const { name, label } = basics;
 ---
 
 <Layout title={`Portfolio de ${name} | ${label}`}>
-	<main>
-		<Hero />
+  <main>
+    <Hero />
 
-		<About />
+    <About />
 
-		<Projects />
+    <Projects />
 
-		<Certificate />
+    <Certificate />
 
-		<Skills />
+    <Skills />
 
-		<Experience />
+    <Separator />
 
-		<Education />
-	</main>
+    <Experience />
 
-	<KeyboardManager />
+    <Education />
+  </main>
+
+  <KeyboardManager />
 </Layout>
 
 <style>
-	main {
-		padding: 4rem 2rem;
-	}
+  main {
+    padding: 4rem 2rem;
+  }
 </style>
