--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -78,7 +78,7 @@ import { projects } from "@cv";
 
   article {
     border-radius: 0.6vmax;
-    border: 1px solid var(--bg-secondary);
+    outline: 2px solid var(--bg-secondary);
     flex-direction: column;
     padding: 0.5rem;
     height: 100%;
