--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -38,7 +38,7 @@ const { summary } = basics;
 <style is:global>
   :root {
     --bg-color: #232946;
-    --bg-secondary: hwb(230 14% 56%);
+    --bg-secondary: #22453d;
     --paragraph: #b8c1ec;
     --primary: #fffffe;
     --secondary: #ececec;
@@ -153,6 +153,11 @@ const { summary } = basics;
       --secondary: #70706a;
     }
 
+    @page {
+      size: "A4";
+      margin: 0;
+    }
+
     .no-print {
       display: none !important;
     }
@@ -160,6 +165,24 @@ const { summary } = basics;
     .print {
       display: block !important;
       font-size: small;
+    }
+
+    p,
+    a,
+    time {
+      font-size: 12px;
+    }
+
+    h2 {
+      font-size: 16px;
+    }
+
+    h3 {
+      font-size: 14px;
+    }
+
+    h4 {
+      font-size: 10px;
     }
 
     astro-dev-toolbar {
